--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raydium-dex-ui",
+  "name": "idex-ui",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://dex.interbiznw.dev",
